--- a/Federal Taphouse/Info.plist
+++ b/Federal Taphouse/Info.plist
@@ -41,8 +41,6 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSLocationWhenInUsageDescription</key>
-	<string>App needs location servers</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -57,5 +55,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Test 2</string>
+	<key>NSLocationWhenInUsageDescription</key>
+	<string>Test 1</string>
 </dict>
 </plist>
