--- a/Federal Taphouse/Info.plist
+++ b/Federal Taphouse/Info.plist
@@ -63,6 +63,8 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>requestb.in</key>
